tried to make the UNet only two layers. still erroring on ConvTranspose2d sizes

--- a/config/config_1.json
+++ b/config/config_1.json
@@ -29,12 +29,15 @@
     "unet_arch_atm": {
         "type": "unet",
         "circular_padding": [5, 5, 0, 0],
-        "down_filters": [2,32,128], 
-        "up_filters": [128,32,1],
-        "down_kernel_size": [5,5],
-        "up_kernel_size": [5,3,3],
-        "down_act": ["ReLU","ReLU"],
-        "up_act": ["ReLU","ReLU"]
+        "down_filters": [2,32,64,128], 
+        "up_filters": [64,32,1],
+        "down_kernel_size": [5,5,3,3],
+        "up_kernel_size": [5,3,3,3],
+        "down_act": ["GELU","GELU","GELU","GELU"],
+        "up_act": ["GELU","GELU","GELU"],
+        "down_padding": ["same","same","same","same"],
+        "up_padding": [[2,2],[1,1],1,1],
+        "up_output_padding": [[1,0],[2,1],1,0]
     },
     
     "arch_atm": {
