--- a/config/config_1.json
+++ b/config/config_1.json
@@ -22,7 +22,7 @@
             "_anom_020_1950-2014.nc"
         ],
         "climo_finame": ["_doymean_ensmean011-020_1950-2014.nc"],
-        "batch_size": 32
+        "batch_size": 50
     },
     
 
@@ -33,8 +33,8 @@
         "up_filters": [64,32,1],
         "down_kernel_size": [5,3,3],
         "up_kernel_size": [5,5,3],
-        "down_act": ["GELU","GELU","GELU","GELU"],
-        "up_act": ["GELU","GELU","GELU"],
+        "down_act": ["ReLU","ReLU","ReLU","ReLU"],
+        "up_act": ["ReLU","ReLU","ReLU"],
         "down_padding": ["same","same","same","same"],
         "up_padding": [2,2,1],
         "up_output_padding": [[1,0],1,0]
@@ -56,26 +56,38 @@
     },
 
     "optimizer": {
-        "type": "Adam",
-        "args":{
-            "lr": 1e-5,
+        "adam": "Adam",
+        "adam_args":{
+            "lr": 0.01,
             "weight_decay": 0,
             "amsgrad": true
+        },
+        "sgd": "SGD",
+        "sgd_args":{
+            "lr": 0.01,
+            "weight_decay": 0,
+            "momentum": 0.9,
+            "nesterov": true
         }
     },
     
     "criterion": "weighted_l1_loss",
 
-     "metrics": ["MAE","MSE"],
+    "metrics": ["MAE","MSE"],
 
     "trainer": {
-        "max_epochs": 30,
+        "max_epochs": 5,
         "save_dir": "saved_models/",
         "early_stopping":{
             "args":{
-                "patience": 10,
+                "patience": 5,
                 "min_delta": 0.001
             }
         }
+    },
+    "lr_scheduler": {
+        "patience": 2,
+        "min_delta": 0.01,
+        "factor": 0.1
+        }
     }
-}
